--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -188,7 +188,7 @@ These are obviously just general observations, further statistical investigation
 
 ### Proportion of employed people of working age (RQ4)
 
-Another point of interest of this study was the proportion of employed people of working age in the population. To calculate this, a new variable named employ_dv was created which was true for all employed people within the age range of 15-64 and false for all others. Next, a design was made using the svydesign function of the svy package, with the household identifiers ('a_hidp') as cluster identifiers, the given strata ('a_strata') as strata and the adjusted weight 'a_psnenip_xw' as weight. It was found during the investigation of the variables that there were two individuals with a missing value for employment. These were included in the initial design and then removed with the subset() function, as weights were calculated with these included. Finally, the proportion and its confidence interval were calculated using the svymean() and confint() functions.
+Another point of interest of this study was the proportion of employed people of working age in the population. To calculate this, a new variable named employ_dv was created which was true for all employed people within the age range of 15-64 and false for all others. Next, a design object was made using the svydesign function of the svy package, with the household identifiers ('a_hidp') as cluster identifiers, the given strata ('a_strata') as strata and the adjusted weight 'a_psnenip_xw' as weight. It was found during the investigation of the variables that there were two individuals with a missing value for employment. These were included in the initial design and then removed with the subset() function, as weights were calculated with these included. Finally, the proportion and its confidence interval were calculated using the svymean() and confint() functions.
 
 The estimated proportion of employed people of working age is 46.2%, 95% CI[44.3%, 48.1%]
 
