--- a/SurveyFinalReport.Rmd
+++ b/SurveyFinalReport.Rmd
@@ -28,9 +28,9 @@ society$a_dvage <- as.numeric(society$a_dvage)
 
 To estimate population quantities from sample data, broadly two strategies can be employed: model-based inference and design-based inference (Lohr, 2010). In this technical report, the effect of the latter on population estimates is investigated, by means of analyzing a single wave of Great Britain's  multi-year panel study 'Understanding Society'. This annual household panel survey is used to assess topics like housing, education, health, and employment among the general population of the United Kingdom. More specifically, we focus on the a subset of first wave, conducted between 2008 and 2009: the 'Innovation Panel' (IP). 
 
-The purpose of the IP was to enable methodological research, before initiating the main 'Understanding Society' survey. As a forerunner, the target sample size of the IP was 1500 households across Great Britain, whereas the intended sample size for the main survey was 40,000 households within the United Kingdom (Boreham, & Constantine, 2008). Therefore, the sampling frame of the IP, The Postcode Address File, encompassing England, Wales and Scotland. Other regions of the United Kingdom like Northern Ireland were not part of the target population.
+The purpose of the IP was to enable methodological research, before initiating the main 'Understanding Society' survey. As a forerunner, the target sample size of the IP was 1500 households across Great Britain, whereas the intended sample size for the main survey was 40,000 households within the United Kingdom (Boreham, & Constantine, 2008). Therefore, the sampling frame of the IP encompassed only England, Wales and Scotland. Other regions of the United Kingdom like Northern Ireland were not part of the target population.
 	
-To obtain the sample from the sampling frame, multistage stratified cluster sampling was used. Postal sectors acted as primary sampling units (PSUs) in the cluster design, and were sorted by Government Office Region. Within these regions, strata were constructed based on a.o. non-manual occupations, ethnic minority density, and population density. After stratification, a sample was drawn from the  sampling frame (the Postcode Address File), with probabilities proportional to the number of postal delivery points within each postcode sector (the stratified PSUs). Per postcode sector, 23 addresses were selected, yielding a total of 2760 addresses. However, interviews were only achieved in 1489 households (Boreham, & Constantine, 2008). This discrepancy -- the sampling, non-sampling, and nonresponse errors -- is one of the main topics that is investigated in the current research project.
+To obtain the sample from the sampling frame, multistage stratified cluster sampling was used. Postal sectors acted as primary sampling units (PSUs) in the cluster design, and were sorted by Government Office Region. Within these regions, strata were constructed based on o.a. non-manual occupations, ethnic minority density, and population density. After stratification, a sample was drawn from the sampling frame (the Postcode Address File), with probabilities proportional to the number of postal delivery points within each postcode sector (the stratified PSUs). Twenty-three addresses were selected per postcode sector, yielding a total of 2760 addresses. However, interviews were only achieved in 1489 households (Boreham, & Constantine, 2008). This discrepancy -- the sampling, non-sampling, and nonresponse errors -- is one of the main topics that is investigated in the current research project.
 
 The aim of this research project is to investigate several properties of the IP data, with respect to the sampling procedure, the use of weights in survey data analysis, and to estimate population quantities from the sample. The report is based on eight research questions (RQs) that were provided in the research proposal (Appendix I: Research Proposal). The RQs are structured according to three topics; Part I: Sampling, Part II: Weighting, and Part III: Estimation. In the sampling part, we investigate how within-household selection of respondents was performed (RQ1), and how many people within the sample personally conducted an interview (RQ6). The part concerning survey weights encompasses a theoretical explanation for the variation between design weights across observations (RQ2), computation of enumerated weights (RQ3), and an effort to suggest variables that could be used to construct nonresponse weights (RQ8). Finally, in the third part population quantities are estimated: the relationship between age and household composition (RQ5), and the proportion of employed people of working age in the population with and without accounting for nonresponse (RQ4 and RQ7, respectively). The exact formulation of the research questions can be found in Appendix I: Research Proposal.
 
@@ -51,12 +51,12 @@ Moreover, stepwise logistic regression is performed to investigate which variabl
 
 For the Understanding Society study, up to three households per dwelling and up to three people per household were selected for interviews. If more than three households were found at a single dwelling, or if a single household contained more than three people, the Kish Grid method was used to select households or people at random.
 
-This method considered to lead to a random sample of household members, and avoids selection bias in the survey. When using the Kish Grid method, the researcher has to list all eligible household members and assign each of them a number i. The Kish Grid then helps you pick a random person i within the n^th^ household you're investigating, see Figure 1. 
+This method considered to lead to a random sample of household members, and avoids selection bias in the survey. When using the Kish Grid method, the researcher has to list all eligible household members and assign each of them a number i. The Kish Grid then helps you pick a random person i within the n^th^ household you're investigating (see Figure 1). 
 
 ![Kish Grid. *Note*. Reprinted from https://www.statisticshowto.datasciencecentral.com/wp-content/uploads/2017/09/kish-grid.png](kish-grid.png)
  
 
-It is a popular method because when carried out correctly, it leads to (almost) equal probability sampling, something other selection methods do not obtain (Kumar, 2014).  This is because of the way the grid is set up, each household member has an equal chance of being selected.  Moreover, the only information you need in order to select respondents is a list containing the names of the persons in the household you want to sample, because selection is based on the number you've assigned to them. Other selection methods usually need more information, like the date of birth of the household members.
+It is a popular method because when carried out correctly, it leads to an (almost) equal probability sample, something other selection methods do not obtain (Kumar, 2014).  This is because of the way the grid is set up, each household member has an equal chance of being selected.  Moreover, the only information you need in order to select respondents is a list containing the names of the persons in the household you want to sample, because selection is based on the number you've assigned to them. Other selection methods usually need more information, like the date of birth of the household members.
 
 
 ### Proportion of personal interviews within the sample (RQ6)
@@ -65,7 +65,7 @@ Within the data, there is a proportion of sample members that did not personally
 
 Moreover, there are 169 sample members for whom a proxy interview was conducted with a close relative or cohabitant (generally a spouse, partner or adult child; Understanding Society, 'Questions about variables', N.D.). Questions answered on the nonresponders' behalf were used to estimate factual information about the nonrespondent -- information about their beliefs is not collected by proxy, and are therefore indicated as missing (item nonresponse). In the current dataset, no variables about beliefs or opinions of respondents are included, leading to a lower nonresponse rate, but potentially higher nonresponse bias when proxy interview data is used to compensate partial nonresponse. 
 
-Since (partial) nonresponse can lead to nonresponse bias, it is important to investigate the effect of nonresponse on the estimates generated above. Ideally, we would both compare respondents to partial nonresponse and unit nonresponse. Because of time constraints within this research project, we only investigate how weights may be constructed to adjust for unit nonresponse (see Part III: Estimation).
+Since (partial) nonresponse can lead to nonresponse bias, it is important to investigate the effect of nonresponse on the estimates generated above. Ideally, we would both compare respondents to partial nonresponse and unit nonresponse. Because of time constraints within this research project, we only investigate how weights may be constructed to adjust for unit nonresponse (see Part II: Weighting).
 
 
 ## Part II: Weighting
@@ -98,11 +98,11 @@ The first step taken was to construct a linear model that contained the design w
 $$ Weight_{adjusted} \sim Weight_{design} + Sex + Age + GOR$$
 
 
-To find the grouping of government office regions, the coefficients that resulted from this regression, including the baseline, were ordered from lowest to highest, which resulted in the following graph:
+To find the grouping of government office regions, the coefficients that resulted from this regression, including the baseline, were ordered from lowest to highest. The results are shown in Figure 3.
 
 ![Coefficients per Government Office Region.](coef.png)
 
-While there are clear groupings in the graph, they do not divide the data into four groups. To be able to investigate the data from a theoretical point of view, the numbers were drawn into a map of the regions, as shown below.
+While there are clear groupings in the graph, they do not divide the data into four groups. To be able to investigate the data from a theoretical point of view, the numbers were drawn into a map of the regions (see Figure 4).
 
 ![Government Regions in Great Britain.](GOR.png) 
 
@@ -114,7 +114,7 @@ To find the age groups, a new variable for grouped government office region was 
 
 ![Coefficients per Age.](coef2.png)
 
-These categories make sense both in theory and weight-wise (see Figure 3). Children are grouped together (0-14), as are teens and students (15-24). Adults are divided in three categories (25-34, 35-44, 45-64) and the elderly in two (65-74, 75+).
+These categories make sense both in theory and weight-wise (see Figure 5). Children are grouped together (0-14), as are teens and students (15-24). Adults are divided in three categories (25-34, 35-44, 45-64) and the elderly in two (65-74, 75+).
 
 As a final step, a third linear regression analysis, with age grouped into the groups described above, was done to find out which groups had the highest weights and were thus underrepresented in the sample.
 
@@ -122,11 +122,11 @@ Females have slightly lower weights than males, indicating that they were overre
 
 ### Construction of nonresponse weights (RQ8)
 
-Nonresponse can seriously threat the quality of estimates if the nonresponders differ from the responders in the study. We can adjust for this by the use of auxiliary variables that hold information about the entire sample. We can compare the distribution of the auxiliary variables of the population with its response distribution, and assess whether the response distribution is representative for the whole population. 
+Nonresponse can seriously threaten the quality of estimates if the nonresponders differ from the responders in the study. We can adjust for this by the use of auxiliary variables that hold information about the entire sample. We can compare the distribution of the auxiliary variables of the population with its response distribution, and assess whether the response distribution is representative for the whole population. 
 
 If the distributions differ, we must conclude that nonresponse has lead to a nonrepresentative sample. We can adjust for this by constructing nonresponse weights from the auxiliary variables. Then the weighted sample is representative with respect to the auxiliary variables used. Different choices of auxiliary variables lead to different weights. In order to the weights to be useful, it is important to use powerful auxiliary variables (Brick, 2013).
 
-The IP User Guide states that "all models used to predict response propensities as described in the Technical Details are fitted using stepwise backward logistic regression with p=0.05" (p. 56). Compared to other selection strategies, this is a fairly simple one. Considering these other strategies for selecting auxiliary variables for weighting adjustments for nonresponse, we advise to look into Schouten's (2007) proposed strategy of a forward inclusion-backward elimination algorithm and/or Saarndal and Lundstrom's (2010) paper.  	We opt for a stepwise backwards logistic regression of because this method is similiar to, yet easier to apply than the selection strategies described in Schouten (2007) Saarndal and Lundstrom's (2010). Most important, this selection strategy was also used in constructing the original weights in the dataset. With this method, we hope to identify variables that predict nonresponse. 
+The IP User Guide states that "all models used to predict response propensities as described in the Technical Details are fitted using stepwise backward logistic regression with p=0.05" (p. 56). Compared to other selection strategies, this is a fairly simple one. Considering these other strategies for selecting auxiliary variables for weighting adjustments for nonresponse, we advise to look into Schouten's (2007) proposed strategy of a forward inclusion-backward elimination algorithm and/or Saarndal and Lundstrom's (2010) paper. We opt for a stepwise backwards logistic regression of because this method is similiar to, yet easier to apply than the selection strategies described in Schouten's (2007) and Saarndal and Lundstrom's (2010) papers. Most importantly, this selection strategy was also used in constructing the original weights in the dataset. With this method, we hope to identify variables that predict nonresponse. 
 
 There are two stages of nonresponse we would have wanted to consider: 
 * person nonresponse: whether a personal interview was conducted yes or no;
@@ -134,14 +134,13 @@ There are two stages of nonresponse we would have wanted to consider:
 
 However, as the levels of variable 'a_hhresp_dv' show, all households within the sample completed at least the household grid. We do not have any information about the 1271 adresses that were selected from the sampling frame but did not take part in an interview. Therefore, we only account for individual unit nonresponse, which occurred in 26.2% of the observations in the sample.
 
-The backwards stepwise regression leads to the same model of predicting nonresponse as the forward stepwise regression. The backwards model does a better job at prediction than an empty model (with only an intercept) and does an equally good job at predicting non-response rate as the full model (with all predictors). These analyses are based on Chi-squared testing. 
-anova(halfbackwards, halffullmodel, test = "Chisq") 
+The backwards stepwise regression leads to the same model of predicting nonresponse as the forward stepwise regression. The backwards model does a better job at prediction than an empty model (with only an intercept) and does an equally good job at predicting non-response rate as the full model (with all predictors). These analyses are based on Chi-squared testing.
 
 The backwards stepwise logistic regression model shows us that the variables a_gor_dv + a_urban_dv + a_sex + a_dvage + a_agegr5_dv + a_agegr13_dv + hh_size + n_child + hh_type are useful in predicting nonresponse. That is, a linear combination of variables indicating sex, and age of respondents in combination with living situation (urban or rural area, and household size, type and numer of children) yield a significant prediction of the logit of the nonresponse indicator. Within this model, only the variables 'a_sex', 'hh_size', and 'hh_type' have a p-value smaller than .001 and therefore we take a closer look at them:
 
-a_sex - for females, the odds of nonresponse are exp(-0.67411) = .51 compared to men. So women are less likely to nonrespond than men. 
-hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251) = 1.72. This means that people in larger households are more prone to nonrespond. 
-hh_type - the odds for nonresponse for couples without children decrease with exp(0.77833) = 2.18. Compared to the other householdtypes, odds of couples without children have the highest probability at nonresponse.  
+* a_sex - for females, the odds of nonresponse are exp(-0.67411) = .51 compared to men. So women are less likely to nonrespond than men. 
+* hh_size - for every unit increase in household size, the odds of nonresponse increase with exp(0.54251) = 1.72. This means that people in larger households are more prone to nonrespond. 
+* hh_type - the odds for nonresponse for couples without children decrease with exp(0.77833) = 2.18. Compared to the other household types, couples without children have the highest odds of responding.  
 
 The model has very high (and unlikely) coefficients for a_agegr5_dv, this is something we unfortunately do not have the time for to further investigate although we notice that this is important. It could be that there is some interaction going on between the two age variables included. If you're interested in some exploratory plots of the response distribution of the individual variables in the regression equation, we refer you to the "SurveyFinalRcode" file. 
 
@@ -152,15 +151,15 @@ Importantly, since this type of analysis is exploratory, no inferences will be d
 ### Relationship between age and household composition (RQ5)
 To investigate the relationship between age and household composition, three steps were performed: choosing which age variable would be used, constructing a new variable to represent household composition, and including the appropriate weight in the analysis. 
 
-Firstly, we investigated which variable to choose representing the age of respondents. There are four variables in the data expressing the age of respondents: a_agegr5_dv, a_agegr10_dv, a_agegr13_dv, a_dvage. The first three are categorical varibles, divided into groups as seen in the UK Labour Force Survey. The fourth variable, a_dvage, is continuous. 
+Firstly, we investigated which variable to choose representing the age of respondents. There are four variables in the data expressing the age of respondents: a_agegr5_dv, a_agegr10_dv, a_agegr13_dv, a_dvage. The first three are categorical variables, divided into groups as seen in the UK Labour Force Survey. The fourth variable, a_dvage, is continuous. 
 
-The first categorical variable, a_agegr5_dv, contains 15 categories indicating age in five-year partitions up to '70 years or older'. The variable a_agegr10_dv is highly similar, indicating age in ten-year intervals, and consisting of 8 different categories between ages zero and seventy-plus. Finally, a_agegr13_dv consists 13 levels, with unequal age intervals under the age of 20 (namely 0-15, 16-17, and 18-19 years old), five-year intervals between the ages 20 and 64, and a sigle interval containing all ages from 65 years old upward. 
+The first categorical variable, a_agegr5_dv, contains 15 categories indicating age in five-year partitions up to '70 years or older'. The variable a_agegr10_dv is highly similar, indicating age in ten-year intervals, and consisting of 8 different categories starting with 0-9 and ending at 70+. Finally, a_agegr13_dv consists 13 levels, with unequal age intervals under the age of 20 (namely 0-15, 16-17, and 18-19 years old), five-year intervals between the ages 20 and 64, and a sigle interval containing all ages from 65 years old upward. 
 
 The continous variable a_dvage denotes the age of respondents in completed years at the moment the interview took place. This was computed by comparing the date of birth and the interview date, or using an estimate (see estimated age variable a_ageest (n = 22), and imputated age variable a_ageif (n = 55)).
 
-To investigate the relationship between age and household composition, it is necessary to know which households consist of children living at home, and which don't. Presumably, the largest variation between children living at home and those living independently occurs within the age group 15-25 year-olds. If we would use the ten-year intervals to indicate age, we might get less precise estimates, because of the large variance wihtin the age category '10-19 years old'. Therefore, we decided to use an age variable with smaller intervals. Because of the unequal intervals in the age variable with 13 categories, it should be analysed as ordinal variable. To interpret the relationship with household composition, this is not ideal. Ultimately, we decided to use agegr5_dv, which is categorical and allows us for contingency tables and nice graphical representations. 
+To investigate the relationship between age and household composition, it is necessary to know which households consist of children living at home, and which don't. Presumably, the largest variation between children living at home and those living independently occurs within the age group 15-25 year-olds. If we would use the ten-year intervals to indicate age, we might get less precise estimates, because of the large variance wihtin the age category '10-19 years old'. Therefore, we decided to use an age variable with smaller intervals. Because of the unequal intervals in the age variable with 13 categories, it should be analysed as an ordinal variable. To interpret the relationship with household composition, this is not ideal. Ultimately, we decided to use agegr5_dv, which is categorical and allows us for contingency tables and nice graphical representations. 
 
-Secondly, to construct a new variable denoting household composition, we used Eurostat as reference. Eurostat distinghuishes three types of variables used to descripte household composition: 
+Secondly, to construct a new variable denoting household composition, we used Eurostat as reference. Eurostat distinghuishes three types of variables used to describe household composition: 
 
 * Household size;
 
@@ -172,16 +171,16 @@ All three household composition indicators were constructed from the data and in
 
 Thirdly, we determided which weighting variable is appropriate to investigate the relationship between age and household composition. Many different weights are available for the dataset, each with a different combination of target population, instrument, wave, and weight type. In this study only data from the first wave was used, so a cross-sectional weight for the first wave (IP) should be used. There are two versions of the cross-sectional weight: the design weight and the adjusted weight. As our goal is to estimate population values rather than sample values, the cross-sectional adjusted weight (XW) is appropriate here. The variables of interest in this case are age and several variables containing household information. As age and all relevant household information is known for all sampled individuals, including those that were not interviewed, the method used to obtain the required information is in all likelihood the enumeration grid (EN). Household information is the same for all people within one household, but age is a feature of an individual. The average age per household should not be used,  as the variance within one household can be high, especially when multiple generations live in one household, and taking the average would thus lead to information loss. Finally, as both children and adults are of interest for this question, a weight that includes all individuals in the sample should be used rather than one that includes only children or only adults (PSN). Thus, the weight appropriate for solving this question is a_psnenip_xw, which is the cross-sectional adjusted weight per individuals for the variables in wave 1 that are obtained through the enumeration grid. 
 
-Our objective was to investigate the relationsihp between age and household composition. We therefore plotted the composition of variable hh_type per age category (from a_agegr5_dv). The plot shows the relationships between household_type and age you'd expect, from which we will highlight a few: 
+Our objective was to investigate the relationsihp between age and household composition. We therefore plotted the composition of variable hh_type per age category (from a_agegr5_dv). Figure 6 shows the relationships between household_type and age you'd expect, from which we will highlight a few: 
 
 ![Household type per age category.](age5hh.png)
 
 * Persons in the youngest three age categories (0-4, 5-9 and 10-14 years old) where all members of either households of type "couple with children", or "single parent with children", obviously. 
 * The reverse pattern is found in the eldest age categories, where almost all persons are in a household of type "couple without children" or "single without children". 
 * There are also a few interesting developments of categories over age. 
-** As age increases, overall the occurence of households with children (pink and blue colored bars) declines. 
-** Looking at household type "couple with children", the transition from being child in such a household and becoming a parent shows from the decline and subsequent increase of occurences of this householdtype over age. 
-** Similarly, also the transition from living in  a household with no children to living in a household with children, to an "empty nest" is visible by the development of the orange bars (couple without children) and the blue bars (couple with children). This is also true for the yellow and pink bars (single without chldren and single parent with children)
++ As age increases, overall the occurence of households with children (pink and blue colored bars) declines. 
++ Looking at household type "couple with children", the transition from being child in such a household and becoming a parent shows from the decline and subsequent increase of occurences of this householdtype over age. 
++ Similarly, also the transition from living in  a household with no children to living in a household with children, to an "empty nest" is visible by the development of the orange bars (couple without children) and the blue bars (couple with children). This is also true for the yellow and pink bars (single without chldren and single parent with children)
 
 These are obviously just general observations, further statistical investigation is required if there are more specific research questions. Therefore we created a new age variable in which all household types were represented within an age group (see Appendix II: R Code). With this new variable, we performed a Chi square test of independence to evaluate the statistical relationship between age and household type. It appeares that age and household type are not independent within the current sample; $\chi^2$(30) = 1763.1, *p* < .001. This result strongly suggests that age and household type are related in the population.
 
@@ -204,11 +203,11 @@ A third design was created to investigate this hypothesis, which excluded all ch
 
 In this report, nonresponse in the Innovation Panel study was investigated. To this end, we first investigated the sampling procedure and the prevalence of nonresponse, then the weights, and finally some population parameters were investigated.
 
-We found that 459 children under the age of 10 were included in the sample, but ineligible for interviews. There were 485 cases of (partial) nonresponse and 169 cases of by-proxy response. Performing a stepwise regression on the nonresponse indicator reveals that household type, sex and household size might be important indicators for nonresponse. A more thorough analysis could render more insight in these possible relationships. Another finding was that employed people are less likely to respond, which leads to a lower estimation of the proportion of employed adults in the population when nonresponders are excluded. The investigation into the relation between age and household composition yielded a confirmation of what was to be expected, with the proportion of households with children dropping when kids become adults, rising again when they get kids of their own, and then dropping again as their children become adults.
+We found that 459 children under the age of 10 were included in the sample, but ineligible for interviews. There were 485 cases of (partial) nonresponse and 169 cases of by-proxy response. Performing a stepwise regression on the nonresponse indicator revealed that household type, sex and household size might be important indicators for nonresponse. A more thorough analysis could render more insight into these possible relationships. Another finding was that employed people are less likely to respond, which leads to a lower estimation of the proportion of employed adults in the population when nonresponders are excluded. The investigation into the relation between age and household composition yielded a confirmation of what we expected. The pattern that we observed was that the proportion of households with children drops when kids become adults, then rises again when they get kids of their own, and then drops again as their children become adults.
 
-There are some points of note in this report. As discussed in RQ3 under Part II, the calculation of the adjusted design weights was not replicable due to the population parameters being not publicly available and the grouping of variables being unknown. While an approximation could be made using linear models, there is no way to know how the adjusted weights were calculated except by asking the researchers involved in this study personally. One could argue that this is bad: research should be replicable. However, the population parameters can be considered sensitive data, and are not publicly accessable because government agencies haven't made it publicly accessible. As such, it may be unrealistic to expect the parameters. Describing the groups but not the parameters would be a middle road solution to this problem. It makes it slightly easier for those without access to the population parameters to estimate them, but also makes the calculations replicable for those who do have access to these parameters. 
+There are some points to note in this report. As discussed in RQ3 under Part II, the calculation of the adjusted design weights was not replicable due to the population parameters being not publicly available and the grouping of variables being unknown. While an approximation could be made using linear models, there is no way to know how the adjusted weights were calculated except by asking the researchers involved in this study. One could argue that this is bad: research should be replicable. However, the population parameters can be considered sensitive data, and are not publicly accessible because government agencies haven't made it publicly accessible. As such, it may be unrealistic to expect the parameters. Describing the groups but not the parameters would be a middle road solution to this problem. It makes it slightly easier for those without access to the population parameters to estimate them, and also makes the calculations replicable for those who do have access to these parameters. 
 
-Another point of interest is the issues with nonresponse shown in RQ7 in part III. This is an example of why one has to be very careful when assessing nonresponse. In RQ4, the population was defined as 'the entire population of Great Britain' (though technically homeless people were excluded due to the sampling design). In this case this is a logical action: we could have defined the population in another way, e.g. as all adults of working age, but the result is not meaningless: for example, it can be used to reflect how much financial weight each person is carrying, where in this case the estimation implies that every employed person on average has to provide for two people, be it through taxes or through buying clothes for your own kid. When assessing nonresponse however, this population becomes problematic: children under ten were ineligible for interviews and thus automatically fell into the nonreponse category. Comparing the resulting estimated proportion of employed responders with the estimated proportion of employed adults says more about the number of young children in the sample than the number of employment of responders. Thus, when assessing nonresponse, one always has to assess who is not responding and why.
+Another point of interest is the issues with nonresponse shown in RQ7 in part III. This is an example of why one has to be very careful when assessing nonresponse. In RQ4, the population was defined as 'the entire population of Great Britain' (though technically homeless people were excluded due to the sampling design). In this case this is a logical action: we could have defined the population in another way, e.g. as all adults of working age, but the result is not meaningless: for example, it can be used to reflect how much financial weight each person is carrying, where in this case the estimation implies that every employed person on average has to provide for two people, be it through taxes or through buying clothes for your own kid. When assessing nonresponse however, this population becomes problematic: children under ten were ineligible for interviews and thus automatically fell into the nonreponse category. Comparing the resulting estimated proportion of employed responders with the estimated proportion of employed adults says more about the number of young children in the sample than the proportion employed responders. Thus, when assessing nonresponse, one always has to assess who is not responding and why.
 
 
 \newpage
